--- a/src/components/ListingDesc/ListingDesc.module.scss
+++ b/src/components/ListingDesc/ListingDesc.module.scss
@@ -5,21 +5,60 @@
   margin-top: 25px;
   border-radius: 15px;
   padding: 20px;
+  @media (max-width: 860px) {
+    padding: 15px;
+    height: 175px;
+  }
+  @media (max-width: 600px) {
+    padding: 10px;
+    height: 150px;
+  }
+  @media (max-width: 550px) {
+    padding: 10px;
+    height: 160px;
+    width: 100%;
+  }
 }
 .descUpper {
   display: flex;
   justify-content: space-between;
+  h2 {
+    @media (max-width: 860px) {
+      font-size: 18px;
+      max-width: 300px;
+      margin-bottom: 7px;
+    }
+    @media (max-width: 600px) {
+      font-size: 14px;
+      max-width: 200px;
+      margin-bottom: 3px;
+      margin-right: 5px;
+    }
+  }
 }
 .price {
   color: #664ef9;
+  @media (max-width: 860px) {
+    font-size: 20px;
+  }
 }
 .desc {
   max-width: 500px;
   margin-bottom: 30px;
   @media (max-width: 880px) {
     max-width: 300px;
-    font-size: 14px;
+    font-size: 13px;
     margin-bottom: 15px;
+  }
+  @media (max-width: 860px) {
+    margin-bottom: 10px;
+  }
+  @media (max-width: 700px) {
+    font-size: 12px;
+  }
+  @media (max-width: 600px) {
+    font-size: 10px;
+    max-width: 250px;
   }
 }
 .descUnder {
@@ -51,6 +90,9 @@
 
   &Text {
     opacity: 0.7;
+    @media (max-width: 860px) {
+      font-size: 13px;
+    }
   }
 }
 .pageWrapper {
