--- a/src/components/ListingsItem/ListingsItem.module.scss
+++ b/src/components/ListingsItem/ListingsItem.module.scss
@@ -1,5 +1,5 @@
 .item {
-  width: 390px;
+  width: 385px;
   height: 450px;
   background: white;
   border-radius: 15px;
