--- a/src/components/ListingsItems/ListingsItems.module.scss
+++ b/src/components/ListingsItems/ListingsItems.module.scss
@@ -3,6 +3,7 @@
   gap: 50px;
 
   flex-wrap: wrap;
+  justify-content: center;
 }
 .title {
   margin-bottom: 30px;
