--- a/src/components/UpperHeader/UpperHeader.module.scss
+++ b/src/components/UpperHeader/UpperHeader.module.scss
@@ -30,6 +30,8 @@
 .auth {
   font-size: 14px;
   margin-left: 15px;
+  cursor: pointer;
+  color: rgb(0, 0, 146);
   @media (max-width: 500px) {
     font-size: 12px;
   }
